--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Paul D. Hester</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<div>Hello World! How fast do things change</div>
-	<div>Not so fast</div>
-	<div>Not so fast at all</div>
+	<div class="init">Behold the future</div>
 </body>
 </html>
