--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Paul D. Hester</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode Sans SC">	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon-16x16.png">
 </head>
 <body>
-	<div class="init">Behold the future</div>
+	<div class="init">Paul D. Hester</div>
 </body>
 </html>
