--- a/olivia/index.html
+++ b/olivia/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Paul D. Hester</title>
+	<title>Olivia Wallerberger</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode Sans SC">	
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="favicon-16x16.png">
