--- a/olivia/index.html
+++ b/olivia/index.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Olivia Wallerberger</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode Sans SC">	
-	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" type="image/png" href="favicon-16x16.png">
+	<link rel="stylesheet" href="../styles.css">
+	<link rel="icon" type="image/png" href="../favicon-16x16.png">
 </head>
 <body>
-	<div class="init">Paul D. Hester</div>
+	<div class="init">Olivia Wallerberger</div>
 </body>
 </html>
