--- a/olivia/index.html
+++ b/olivia/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Olivia Wallerberger</title>
+	<title>Olivia Kaiser</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode Sans SC">	
 	<link rel="stylesheet" href="../styles.css">
 	<link rel="icon" type="image/png" href="../favicon-16x16.png">
 </head>
 <body>
-	<div class="init">Olivia Wallerberger</div>
+	<div class="init">Olivia Kaiser</div>
 </body>
 </html>
